RESOLVED FIXED 256836
[WebGPU] Include texture_external's missing fields in BindGroup
https://bugs.webkit.org/show_bug.cgi?id=256836
Summary [WebGPU] Include texture_external's missing fields in BindGroup
Tadeu Zagallo
Reported 2023-05-16 06:02:10 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-05-16 06:50:26 PDT
Tadeu Zagallo
Comment 2 2023-05-16 06:52:31 PDT
EWS
Comment 3 2023-05-17 02:17:51 PDT
Committed 264140@main (b54763b0a448): <https://commits.webkit.org/264140@main> Reviewed commits have been landed. Closing PR #13918 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.