[WebGPU] Include texture_external's missing fields in BindGroup https://bugs.webkit.org/show_bug.cgi?id=256836 rdar://109403008

Reviewed by Mike Wyrzykowski.

Remove the FIXME added on 264108@main since texture_external is being added to
WGSL in PR#13878

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):

Canonical link: https://commits.webkit.org/264140@main